fix for scrollbar showing on IE for nav-page-list

--- a/assets/sass/components/navigation.scss
+++ b/assets/sass/components/navigation.scss
@@ -325,7 +325,7 @@ Add `<div class="overlay"></div>` at the end of the `body` tag to display the gr
 }
 
 .drilldown-container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .nav-main {
